# ark-circom-witnesscalc

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
example/: multiply.graph  multiply.input.json
src/: circuit.rs  constraints.rs  jsonstructs.rs  jsonutils.rs  lib.rs  r1cs_reader.rs  utils.rs
