[package]
name = "ark-circom-witnesscalc"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
circom-witnesscalc = { git = "https://github.com/HarryR/circom-witnesscalc" }
ark-ff = "0.5"
ark-serialize = "0.5"
ark-relations = "0.5"
ark-std = "0.5"
ark-groth16 = "0.5"
ark-bn254 = "0.5"
ark-crypto-primitives = "0.5"
color-eyre = "0.6.2"
byteorder = "1.4.3"
anyhow = "1.0.95"
serde_json = "1.0.64"
hex = "0.4.3"

[dev-dependencies]
hex-literal = "1.0"